bootstrap/nexus/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - env:
        - name: CONTEXT_PATH
          value: /
        - name: INSTALL4J_ADD_VM_PARAMS
          value: -Xms1200m -Xmx1200m -Djava.util.prefs.userRoot=/nexus-data/
        image: sonatype/nexus3:3.28.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - echo
            - ok
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nexus
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 2Gi
            cpu: 500m
          requests:
            memory: 2Gi
            cpu: 500m           
        terminationMessagePath: /dev/termination-log
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pv
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
